# rust

./: README.md
blog/src/: blog_with_struct.rs  blog_with_trait_object.rs  lib.rs
c/: .gitignore
c/c_caller/: build.sh  main.c
c/call_rust/: build.sh  main.c
c/called_by_rust/: build.sh  family.c
call_c/: Cargo.toml  build.rs
call_c/src/: lib.rs  main.rs
call_c_with_bindgen/: Cargo.toml  build.rs
call_c_with_bindgen/src/: main.rs
closure_and_fn/: Cargo.toml
closure_and_fn/src/: main.rs
closure_thread_pool/: Cargo.toml
closure_thread_pool/src/: lib.rs
company/src/: department.rs  lib.rs  main.rs
deref/src/: lib.rs  main.rs
err/src/: main.rs
family/: Cargo.toml  build.rs
family-ffi/: Cargo.toml  build.rs  family_ffi.h
family-ffi/src/: lib.rs
family/src/: ffi.rs  lib.rs
fibonacci/src/: main.rs
generic_closure/: Cargo.toml
generic_closure/src/: main.rs
guessing_game/src/: main.rs
life_time/src/: main.rs
list/src/: lib.rs
minigrep/: english.txt
minigrep/src/: config.rs  lib.rs  main.rs  search.rs
object_thread_pool/: Cargo.toml
object_thread_pool/src/: lib.rs  main.rs
pattern_basic/: Cargo.toml
pattern_distructor/: Cargo.toml
ref_loop/: Cargo.toml
simple_thread_pool/: Cargo.toml
tempr_convert/: Cargo.toml
thread_basic/: Cargo.toml
thread_channel/: Cargo.toml
trait_adv2/: Cargo.toml
trait_basic/: Cargo.toml
trait_basic2/: Cargo.toml
trait_type/: Cargo.toml
web/: Cargo.toml  cmd
web/config/: config.toml
web/html/: christmas.html  hello.html
web/src/: config.rs  lib.rs  main.rs
(+24 files in other folders)
